Add button component (work in progress)

--- a/portfolio-project-matching-app/styles/globals.css
+++ b/portfolio-project-matching-app/styles/globals.css
@@ -1,8 +1,10 @@
 /* https://tailwindcss.com/docs/guides/nextjs */
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@import 'btn.css';
 
 .mySillyStyle {
     @apply flex items-center justify-between flex-wrap bg-blue-700 p-4;
 }
+
+@tailwind utilities;
