--- a/portfolio-project-matching-app/components/Button.module.css
+++ b/portfolio-project-matching-app/components/Button.module.css
@@ -1,8 +1,13 @@
 /* https://tailwindcss.com/docs/guides/nextjs */
+
+.btn {
+    @apply m-2 py-2 px-3 border-2 rounded-3xl focus:outline-none focus:ring-1;
+}
+
 .btnGeneral {
-    @apply m-2 py-2 px-3 border-2 border-gray-600 text-gray-600 rounded-3xl hover:text-gray-900 hover:border-gray-900 hover:bg-gray-100;
+    @apply btn border-gray-600 text-gray-600 hover:text-gray-900 hover:border-gray-900 hover:bg-gray-100 focus:ring-gray-900 focus:bg-gray-200;
 }
 
 .btnWarning {
-    @apply m-2 py-2 px-3 border-2 border-red-600 text-red-600 rounded-3xl hover:text-red-900 hover:border-red-900 hover:bg-red-100;
+    @apply btn border-red-600 text-red-600 hover:text-red-900 hover:border-red-900 hover:bg-red-100 focus:ring-red-900 focus:bg-red-100;
 }
