skeleton of ProjectCard component built out. Added some margin to UserIcon despite being outside branch scope

--- a/portfolio-project-matching-app/styles/globals.css
+++ b/portfolio-project-matching-app/styles/globals.css
@@ -6,3 +6,7 @@
 .mySillyStyle {
     @apply flex items-center justify-between flex-wrap bg-blue-700 p-4;
 }
+
+.defaultBorder {
+    @apply border-2 border-gray-400 rounded-md;
+}
