Update Nav Bar background color

--- a/portfolio-project-matching-app/components/Nav.module.css
+++ b/portfolio-project-matching-app/components/Nav.module.css
@@ -1,5 +1,5 @@
 .navWarm {
-    @apply bg-gradient-to-r from-custom-warm-extraLight via-custom-warm-light to-custom-warm-med;
+    @apply border-b-2 border-custom-cool-extraDark bg-gradient-to-br from-custom-warm-extraLight via-custom-warm-light to-custom-warm-med;
 }
 
 .navCool {
