--- a/portfolio-project-matching-app/components/ProjectCard.module.css
+++ b/portfolio-project-matching-app/components/ProjectCard.module.css
@@ -1,3 +1,3 @@
 .project {
-    @apply shadow-inner bg-white p-2 w-full h-full border-2 border-custom-cool-extraDark rounded-md;
+    @apply shadow-2xl bg-white p-2 w-full h-full border-2 border-custom-cool-extraDark rounded-md;
 }
